# Projet-Academique-Cagnotte

./: CAGNOTTE.db  PKG-INFO  Site.txt  dev.env  pyproject.toml
correction/: data.py  domain.py  views.py
src/: domain.py  views.py
src/archilog/: __init__.py  config.py  data.py  domain.py  views.py
src/archilog/static/: style1.css
src/archilog/templates/: index.html  money_pot.html
storage/: CAGNOTTE.db  MONEY_POTS.db
